# pgen_client

./: Cargo.toml  README.md
.github/workflows/: artifacts.yml  ci.yml  release.yml
data/: CIE_cc_1931_2deg.csv
src/: external.rs  main.rs  spotread.rs  utils.rs
src/app/: commands.rs  eframe_app.rs  external_generator_ui.rs  internal_generator_ui.rs  mod.rs  pgen_app.rs  read_file_ops.rs  utils.rs
src/app/calibration/: cie_diagram_plot.rs  gamma_tracking_plot.rs  luminance_plot.rs  mod.rs  results_summary.rs  rgb_balance_plot.rs
src/calibration/: cct.rs  luminance_eotf.rs  mod.rs  reading_result.rs
src/generators/: internal.rs  mod.rs  resolve.rs  tcp_generator_client.rs
src/pgen/: client.rs  commands.rs  controller.rs  daemon.rs  mod.rs  pattern_config.rs  utils.rs
src/pgen/controller/: daemon.rs  handler.rs  mod.rs
src/pgen/interfaces/: mod.rs  resolve.rs
