[package]
name = "pgen_client"
version = "1.0.3"
authors = ["quietvoid"]
edition = "2024"
rust-version = "1.85.0"
license = "GPL-3.0"

[dependencies]
clap = { version = "4.5.35", features = ["derive", "wrap_help", "deprecated"] }
log = "0.4.27"
regex = "*"
once_cell = "*"
pretty_env_logger = "0.5"
clap-verbosity-flag = "3.0.2"
anyhow = "1.0.97"
itertools = "0.14.0"
ndarray = { version = "0.16.1", features = ["rayon"] }
strum = { version = "0.27.1", features = ["derive"] }
base64 = "0.22.1"
csv = "1.3.1"
rfd = "0.15.3"
serde = "1.0.219"
serde_derive = "1.0.219"
yaserde = { version = "0.12.0", features = ["yaserde_derive"] }

tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "process"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
async-stream = "0.3.6"

eframe = { version = "0.31.1", features = ["persistence"] }
egui_extras = "0.31.1"
egui_plot = "0.32.1"
ecolor = "*"
kolor-64 = "0.1.9"
deltae = "0.3.2"

[profile.release]
opt-level = 3
strip = true
